오늘 수확량 좀 많은 듯? ㅋ

--- a/tensorflow_operations_basic.ipynb
+++ b/tensorflow_operations_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -29,38 +29,59 @@
     "z 멤버를 사용하지 않아도 다양한 방법으로 출력할 수 있음\n",
     "'''\n",
     "with tf.Session() as sess:\n",
-    "    print \"x = 3 이고 y = 5\" # 그냥 문자열,,\n",
-    "    print \"위 값을 합하면... %i\" % sess.run(x+y)\n",
-    "    print \"위 값을 곱하면... %i\" % sess.run(x*y)"
+    "    print (\"x = 3 이고 y = 5\") # 그냥 문자열,,\n",
+    "    print (\"위 값을 합하면... %i\" % sess.run(x+y))\n",
+    "    print (\"위 값을 곱하면... %i\" % sess.run(x*y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.26062369]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "x = tf.Variable(tf.random_uniform([1], -1,1))\n",
+    "\n",
+    "init = tf.initialize_all_variables()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    print (sess.run(x))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
