--- a/tensorflow_GradientDescent_code.ipynb
+++ b/tensorflow_GradientDescent_code.ipynb
@@ -1,8 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GradientDescent code\n",
+    "\n",
+    "이 코드는 GradientDescent를 사용하여 인자를 찾아내는 코드이다.\n",
+    "무슨 말인지 처음에는 잘 모를 수도 있으니 코드를 보며 습득해보자.\n",
+    "\n",
+    "이 코드를 보기 전에, 경사하강법 알고리즘을 습득하고 있어야 한다.\n",
+    "이 알고리즘은 1차 근사값을 찾기 위해 기울기를 계속 낮은 쪽으로 이동시키는\n",
+    "반복 알고리즘이다.\n",
+    "\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/7/79/Gradient_descent.png\" alt=\"\" width=\"200\" height=\"200\">\n",
+    "\n",
+    "\n",
+    "경사 하강법을 실행하는 모습, 경사가 낮아지는 쪽으로 이동하여 차례대로 를 얻는다\n",
+    "\n",
+    "출처: 위키백과"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,32 +33,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [[ 0.58771551  0.08172726]] [ 0.19289613]\n",
-      "20 [[ 0.20054734  0.21774523]] [ 0.23305038]\n",
-      "40 [[ 0.12895437  0.21611501]] [ 0.27487135]\n",
-      "60 [[ 0.10969249  0.20719562]] [ 0.29063094]\n",
-      "80 [[ 0.10346626  0.20282689]] [ 0.29651463]\n",
-      "100 [[ 0.10127083  0.20106983]] [ 0.29870442]\n",
-      "120 [[ 0.10047003  0.20039999]] [ 0.29951853]\n",
-      "140 [[ 0.10017436  0.20014894]] [ 0.29982111]\n",
-      "160 [[ 0.10006475  0.20005539]] [ 0.29993349]\n",
-      "180 [[ 0.10002407  0.20002061]] [ 0.29997528]\n",
-      "200 [[ 0.10000893  0.20000766]] [ 0.2999908]\n"
+      "0 [[ 0.16220364  0.68908304]] [ 0.01081311]\n",
+      "20 [[ 0.16026118  0.32822576]] [ 0.20052963]\n",
+      "40 [[ 0.12793198  0.2372244 ]] [ 0.26533619]\n",
+      "60 [[ 0.11101163  0.21168195]] [ 0.2878764]\n",
+      "80 [[ 0.10408032  0.20385446]] [ 0.29575199]\n",
+      "100 [[ 0.10147062  0.20130929]] [ 0.29851013]\n",
+      "120 [[ 0.10052308  0.20045184]] [ 0.29947719]\n",
+      "140 [[ 0.10018486  0.20015727]] [ 0.29981649]\n",
+      "160 [[ 0.10006511  0.20005497]] [ 0.29993555]\n",
+      "180 [[ 0.10002291  0.20001926]] [ 0.29997739]\n",
+      "200 [[ 0.10000804  0.20000675]] [ 0.29999205]\n"
      ]
     }
    ],
    "source": [
     "# -*- coding: utf-8 -*- \n",
-    "\n",
-    "'''\n",
-    "이 코드는 GradientDescent를 사용하여 인자를 찾아내는 코드이다.\n",
-    "무슨 말인지 처음에는 잘 모를 수도 있으니 코드를 보며 습득해보자.\n",
-    "\n",
-    "이 코드를 보기 전에, 경사하강법 알고리즘을 습득하고 있어야 한다.\n",
-    "이 알고리즘은 1차 근사값을 찾기 위해 기울기를 계속 낮은 쪽으로 이동시키는\n",
-    "반복 알고리즘이다.\n",
-    "\n",
-    "'''\n",
     "\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -79,30 +91,30 @@
     "sess.run(init)\n",
     "\n",
     "# 200번 학습하도록 수행,,\n",
-    "for step in xrange(0, 201):\n",
+    "for step in range(0, 201):\n",
     "    sess.run(train)\n",
     "    if step % 20 == 0: # 20개씩 짜름,,\n",
-    "        print step, sess.run(W), sess.run(b)"
+    "        print (step, sess.run(W), sess.run(b))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
