--- a/tensorflow_constant_basic.ipynb
+++ b/tensorflow_constant_basic.ipynb
@@ -1,10 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 텐서플로우 변수 입문\n",
+    "\n",
+    "제목이 조금 그렇지만, 변수 입문 과정이다. tensorflow는 Python 언어를 사용하지만, \n",
+    "몇 가지 다른 점이 많이 존재한다. 우리는 그를 익히고 외워야만 프로그래밍하기 쉽다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -29,12 +40,12 @@
     "# Python 복습을 위해 다시금 반복문 사용법을 익힘.. (range 사용)\n",
     "\n",
     "for i in range(1,10):\n",
-    "    print i"
+    "    print (i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -46,12 +57,12 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
-    "hello = tf.constant('Hello Tensorflow')\n"
+    "hello = tf.constant('Hello Tensorflow')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Const_8:0\", shape=(), dtype=string)\n"
+      "Tensor(\"Const_1:0\", shape=(), dtype=string)\n"
      ]
     }
    ],
@@ -73,12 +84,12 @@
     "\n",
     "hello = tf.constant('Hello Tensorflow')\n",
     "\n",
-    "print hello"
+    "print (hello)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Tensorflow\n"
+      "b'Hello Tensorflow'\n"
      ]
     }
    ],
@@ -107,12 +118,12 @@
     "'''\n",
     "sess = tf.Session()\n",
     "\n",
-    "print sess.run(hello)"
+    "print (sess.run(hello))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -138,12 +149,12 @@
     "\n",
     "sess = tf.Session()\n",
     "\n",
-    "print sess.run(z)"
+    "print (sess.run(z))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,27 +188,27 @@
     "z = tf.add(x,y)\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "    print sess.run(z)"
+    "    print (sess.run(z))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
