--- a/tensorflow_placeholder_basic.ipynb
+++ b/tensorflow_placeholder_basic.ipynb
@@ -48,28 +48,28 @@
     "\n",
     "'''\n",
     "with tf.Session() as sess:\n",
-    "    print \"두 개 값의 합: %i\" % sess.run(add, feed_dict={x:5, y:5})\n",
-    "    print \"두 개 값의 곱: %i\" % sess.run(mul, feed_dict={x:5, y:5})"
+    "    print (\"두 개 값의 합: %i\" % sess.run(add, feed_dict={x:5, y:5}))\n",
+    "    print (\"두 개 값의 곱: %i\" % sess.run(mul, feed_dict={x:5, y:5}))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
