--- a/tensorflow_tensor_concept_example.ipynb
+++ b/tensorflow_tensor_concept_example.ipynb
@@ -1,6 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "### tensor concept를 시작합니다.\n",
+    "\n",
+    "노트북을 처음써봐서 그런지 주석을 달고 이것저것 삽질했는데, 단축키\n",
+    "보다가 이런 기능 있어서 써봄 ㅋㅋ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "'''\n",
+    "음.. 이 부분은 Variable과 constant, 부분을\n",
+    "잘 숙지한 후, 사용하는 것이 좋습니다.\n",
+    "'''\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tensorflow import는 항상 잊지말고... ㅋ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "var1 = tf.Variable(0, name=\"counter\")\n",
+    "init_op = tf.initialize_all_variables()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable 함수를 사용할 경우, 반드시 initialize(초기화)를 해줍시다!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -21,23 +78,12 @@
     }
    ],
    "source": [
-    "'''\n",
-    "음.. 이 부분은 Variable과 constant, 부분을\n",
-    "잘 숙지한 후, 사용하는 것이 좋습니다.\n",
-    "'''\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "\n",
-    "var1 = tf.Variable(0, name=\"counter\")\n",
-    "init_op = tf.initialize_all_variables()\n",
-    "\n",
     "with tf.Session() as sess:\n",
-    "    print \"Session Running for init_op = \", sess.run(init_op) # init_op tensor 실행,,\n",
-    "    print \"Session Running for var1 = \", sess.run(var1) # var1 tensor 실행,,\n",
+    "    print (\"Session Running for init_op = \", sess.run(init_op)) # init_op tensor 실행,,\n",
+    "    print (\"Session Running for var1 = \", sess.run(var1)) # var1 tensor 실행,,\n",
     "     \n",
-    "    print \"var1.assign(1412) = \", var1.assign(1412) # 아이러니하게도 이놈은 동작을 안함,,\n",
-    "    print \"Session Running for var1 = \", sess.run(var1) # 다시 var1 tensor 실행,,\n",
+    "    print (\"var1.assign(1412) = \", var1.assign(1412)) # 아이러니하게도 이놈은 동작을 안함,,\n",
+    "    print (\"Session Running for var1 = \", sess.run(var1)) # 다시 var1 tensor 실행,,\n",
     "    \n",
     "    '''\n",
     "    가장 중요한 부분은 print 문을 사용해서 각 Tensor들을 실행하였는데, assign 함수를 사용해서\n",
@@ -48,28 +94,28 @@
     "    '''\n",
     "    \n",
     "    assign_op = var1.assign(1412)\n",
-    "    print \"Session Running for assign_op = \", sess.run(assign_op)\n",
-    "    print \"Session Running var1 = \", sess.run(var1)"
+    "    print (\"Session Running for assign_op = \", sess.run(assign_op))\n",
+    "    print (\"Session Running var1 = \", sess.run(var1))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
